packages/components/calendar/src/select-day.scss
:host {
  --_days-in-week: 7;
  --_cell-size: calc(var(--sl-size-300) + 2 * var(--sl-size-050) + 2 * var(--sl-size-010));
  --_focus-offset: var(--sl-size-outlineOffset-default);
  --_week-number-column-size: var(--sl-size-450);

  display: inline-flex;
  flex-direction: column;
  max-inline-size: fit-content;
  padding: var(--_focus-offset);
}

:host([show-week-numbers]) {
  .days-of-week {
    grid-template-columns: var(--_week-number-column-size) repeat(var(--_days-in-week), var(--_cell-size));
  }

  .scroller {
    max-inline-size: calc(var(--_week-number-column-size) + var(--_days-in-week) * var(--_cell-size));
  }

  sl-month-view::part(week-number) {
    min-inline-size: calc(var(--_week-number-column-size) - 2 * var(--sl-size-010));
  }
}

header {
  align-items: center;
  display: flex;
  gap: var(--sl-size-100);
  justify-content: space-between;
  margin-block-end: var(--sl-size-050);
  padding-block: var(--sl-size-025);
  padding-inline: var(--sl-size-050) var(--sl-size-025);

  .next-month {
    margin-inline-start: calc(-1 * var(--sl-size-050));
  }
}

sl-button {
  user-select: none;
}

.current-month,
.current-year {
  font-weight: var(--sl-text-new-typeset-fontWeight-semiBold);
}

.current-year {
  margin-inline-start: var(--sl-size-100);
}

.previous-month {
  margin-inline-start: auto;
}

.days-of-week {
  color: var(--sl-color-foreground-subtlest);
  display: grid;
  font-weight: var(--sl-text-new-typeset-fontWeight-semiBold);
  grid-template-columns: repeat(var(--_days-in-week), var(--_cell-size));
  line-height: calc((24 / 14) * 1em);
  margin-block-end: var(--sl-size-025);
  padding-block: var(--sl-size-050);
  padding-inline: 0;
}

.day-of-week,
.week-number {
  padding-inline: var(--sl-size-010);
  text-align: center;
}

.week-number {
  min-inline-size: calc(var(--_week-number-column-size) - 2 * var(--sl-size-010));
  position: relative;

  &::after {
    background: var(--sl-color-border-neutral-plain);
    content: '';
    inline-size: var(--sl-size-borderWidth-subtle);
    inset: calc(var(--sl-size-050) * -1) 0 calc(var(--sl-size-100) * -1) auto;
    position: absolute;
  }
}

.scroller {
  align-items: start;
  display: flex;
  flex-grow: 1;
  max-inline-size: calc(var(--_days-in-week) * var(--_cell-size));
  outline: none;
  overflow: scroll hidden;
  overscroll-behavior-x: contain;
  scroll-padding-inline: 0;
  scroll-snap-type: x mandatory;
  scrollbar-width: none;
}

sl-month-view {
  flex-shrink: 0;
  padding-inline: 0;
  scroll-snap-align: start;
  scroll-snap-stop: always;

  &::part(header) {
    display: none;
  }
}

